--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -6,29 +6,17 @@
             android:icon="@drawable/ic_dashboard"
             android:title="Dashboard" />
         <item
-            android:id="@+id/nav_appointments"
-            android:icon="@drawable/ic_appointment"
-            android:title="Appointments" />
+            android:id="@+id/nav_book_appointment"
+            android:icon="@android:drawable/ic_menu_add"
+            android:title="Book Appointment" />
+        <item
+            android:id="@+id/nav_my_visits"
+            android:icon="@android:drawable/ic_menu_today"
+            android:title="My Visits" />
         <item
             android:id="@+id/nav_profile"
-            android:icon="@drawable/ic_profile"
-            android:title="My profile" />
-        <item
-            android:id="@+id/nav_history"
-            android:icon="@drawable/ic_history"
-            android:title="Treatment history" />
-        <item
-            android:id="@+id/nav_billing"
-            android:icon="@drawable/ic_billing"
-            android:title="Billing" />
-        <item
-            android:id="@+id/nav_complaint"
-            android:icon="@drawable/ic_complaint"
-            android:title="File a complaint" />
-        <item
-            android:id="@+id/nav_inquiry"
-            android:icon="@drawable/ic_inquiry"
-            android:title="Submit an inquiry" />
+            android:icon="@android:drawable/ic_menu_myplaces"
+            android:title="Profile" />
     </group>
 
     <item android:title="Account">
