--- a/app/src/main/res/layout/item_appointment_request.xml
+++ b/app/src/main/res/layout/item_appointment_request.xml
@@ -65,16 +65,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="Confirm"
-                android:layout_marginEnd="8dp"/>
-
-            <Button
-                android:id="@+id/btnDecline"
-                style="?attr/materialButtonOutlinedStyle"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="Decline"/>
+                android:text="Confirm"/>
 
         </LinearLayout>
 
